# Nizubot-Rust

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  bot_settings_example.json  index.html  mkdocs.yml  rust-toolchain.toml  sitemap.xml
.github/workflows/: ci.yml
commands/admin/clear_bot_data/: index.html
commands/admin/clear_data/: index.html
commands/admin/cotd_role/: index.html
commands/admin/detect_message/: index.html
commands/admin/log/: index.html
commands/admin/lua/: index.html
commands/admin/manage_reminders/: index.html
commands/admin/message/: index.html
commands/admin/reaction_role/: index.html
commands/fun/genmeme/: index.html
commands/simple/cotd/: index.html
commands/simple/echo/: index.html
commands/simple/eval/: index.html
commands/simple/icon/: index.html
commands/simple/join_order/: index.html
commands/simple/ping/: index.html
commands/simple/rng/: index.html
commands/simple/sleep_calc/: index.html
commands/utility/check_timezone/: index.html
commands/utility/currency/: index.html
commands/utility/profile/: index.html
commands/utility/remind/: index.html
commands/utility/time_format/: index.html
commands/utility/timezone/: index.html
data/: cotdRoles.json  cotds.json  heck.json  storing.json
data/guilds/1011643968813006968/: cotd_role.json
docs/: index.md  mkdocs.yml  reading_docs.md
docs/commands/admin/: clear_bot_data.md  clear_data.md  cotd_role.md  detect_message.md  log.md  lua.md  manage_reminders.md  message.md  reaction_role.md
docs/commands/fun/: genmeme.md
docs/commands/simple/: cotd.md  echo.md  eval.md  icon.md  join_order.md  ping.md  rng.md  sleep_calc.md
docs/commands/utility/: check_timezone.md  currency.md  profile.md  remind.md  time_format.md  timezone.md
docs/docs/: index.md
docs/tutorials/: lua_api.md
docs/tutorials/lua_api/: guild_commands.md
generate_materials/: Credits.txt
reading_docs/: index.html
search/: search_index.json
src/: commands.rs  give_up_serialize.rs  main.rs  read.rs  tokens.rs  utils.rs
src/commands/: admin_commands.rs  fun_commands.rs  simple_commands.rs  utility_commands.rs
src/commands/admin_commands/: clear_bot_data.rs  clear_data.rs  cotd_role.rs  detect_message.rs  log.rs  lua.rs  lua_command.rs  manage_reminders.rs  message.rs  reaction_role.rs
src/commands/admin_commands/lua/: command.rs  instance.rs
src/commands/fun_commands/: genmeme.rs
src/commands/simple_commands/: breakread.rs  cotd.rs  echo.rs  eval.rs  icon.rs  join_order.rs  joinorder.rs  ping.rs  read.rs  read_write.rs  rng.rs  sleep_calc.rs  sleepcalc.rs  write.rs
src/commands/utility_commands/: check_timezone.rs  currency.rs  profile.rs  remind.rs  time_format.rs  timezone.rs
src/managers/: cotd_manager.rs  currency_manager.rs  db.rs  detector_manager.rs  join_order_manager.rs  log_manager.rs  lua_manager.rs  message_manager.rs  mod.rs  profile_manager.rs  reaction_manager.rs  remind_manager.rs  storage_manager.rs
src/managers/lua_manager/: serde_and_lua.rs
tutorials/lua_api/: index.html
tutorials/lua_api/guild_commands/: index.html
(+6 files in other folders)
