[package]
name = "nizubot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
poise = {version = "0.6.1", features = ["cache", "unstable"]}
rand = "0.8.5"
reqwest = {version = "0.12.8", features = ["json"]}
serde = "1.0.188"
serde_json = "1.0.107"
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread", "process"]}
evalexpr = "11.3.0"
percent-encoding = "2.3.1"
openssl = { version = "=0.10.57", features = ["vendored"] }
openssl-sys = { version = "=0.9.92" }
cc = "=1.0.69"
chrono = "0.4.37"
chrono-tz = { version = "0.10.0", features = ["case-insensitive"]}
serenity = { version = "0.12.2", features = ["unstable_discord_api"] }
webp = "0.3.0"

[patch.crates-io]
poise = {git = "https://github.com/fgardt/poise.git", branch = "feat/user_apps", checkout = "a8a987df8eee449a69c6ca3544347c2c2f3697e5"}
