[package]
name = "nizubot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
poise = { version = "0.6.1", features = ["cache"] }
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
evalexpr = "11.3.0"
percent-encoding = "2.3.1"
openssl = { version = "0.10.68", features = ["vendored"] }
chrono = "0.4.37"
chrono-tz = { version = "0.10.0", features = ["case-insensitive"] }
webp = "0.3.0"
mlua = { version = "0.11.5", default-features = false, features = [
    "luau",
    "vendored",
    "async",
    "send",
] }
fuzzy-matcher = "0.3.7"
either = "1.15.0"

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "current", checkout = "518ff0564865bca2abf01ae8995b77340f439ef9" }
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "current", checkout = "a1f2441ad4e507bb6cedf2bce76fa5d6d5f205df" }
